--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     <div class="process-layout" style="margin-left:-50px;">
         <div>
             <div class="process-step">
-                <div class="p-icon"><i class="fa-solid fa-clock-rotate-left"></i></div>
+                <div class="p-icon"><i class="fa-solid fa-filter"></i></div>
                 <div><h3>Semana Vencida</h3><p>Las ventas de Lunes a Domingo se pagan la siguiente semana. Tu base se paga siempre.</p></div>
             </div>
             <div class="process-step">
@@ -624,4 +624,5 @@
 </div>
 
 </body>
+
 </html>
