--- a/index.html
+++ b/index.html
@@ -528,6 +528,10 @@
                 <div class="p-icon"><i class="fa-solid fa-graduation-cap"></i></div>
                 <div><h3>Oferta Integral</h3><p>Maximiza ganancias con Renovaciones, Planes Simples y Empresariales.</p></div>
             </div>
+            <div class="process-step">
+                <div class="p-icon"><i class="fa-solid fa-clock-rotate-left"></i></div>
+                <div><h3>Retención del Chargeback</h3><p>Se aplica en las ventas de activaciones y renovaciones Basicos y Plus tanto AVS Masivo como AVS Empresarial.</p></div>
+            </div>
         </div>
         <div style="text-align:center; margin-left:-15px;">
             <img src="IMG/img_cuida.png" alt="C.U.I.D.A" style="width: 1050px; max-width: 105%; border-radius: 10px;">
@@ -626,4 +630,5 @@
 </body>
 
 </html>
+
 
