--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 <div class="card-body">
                     <div id="ui_reno_txt"><ul style="text-align:left; padding-left:15px; margin:0; font-size:13px; line-height:1.4;">
             <li><b>0.5X Semanal:</b> Pago base (Anticipo).</li>
-            <li><b>1.0X Total:</b> Si cumples Cuota Act. (4 Act).</li>
+            <li><b>1.0X Total:</b> Si cumples la cuota mensual de Act.</li>
             <li style="color:var(--teal-dark); font-weight:bold;"><b>1.5X Total:</b> Si vendes 10+ Renovaciones Y cumples Cuota Act.</li>
         </ul></div>
                 </div>
@@ -645,5 +645,6 @@
 
 </body>
 </html>
+
 
 
