--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
 </head>
 <body>
 
-<button class="download-btn" onclick="downloadHTML()">
+<!--<button class="download-btn" onclick="downloadHTML()">
     <i class="fa-solid fa-download"></i> Descargar Presentación
-</button>
+</button> -->
 
 <script>
     function downloadHTML() {
@@ -681,6 +681,7 @@
 
 </body>
 </html>
+
 
 
 
